jumping, some bugfixes

--- a/morse/style/items/post.css
+++ b/morse/style/items/post.css
@@ -22,6 +22,10 @@
   margin-bottom:5pt;
   background:#fff;
   box-shadow:1px 1px #ddd;
+  -webkit-transition: all 5s ease;
+  -moz-transition: all 5s ease;
+  -o-transition: all 5s ease;
+  transition: all 5s ease;
 }
 
   .post{
